[gd_scene load_steps=3 format=2]

[ext_resource path="res://Visuals/Icons/CloseIcon.svg" type="Texture" id=1]
[ext_resource path="res://Scripts/sys_button.gd" type="Script" id=2]

[node name="MinButton" type="ColorRect"]
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
color = Color( 0.156863, 0.184314, 0.266667, 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 25, 15 )
scale = Vector2( 0.130065, 0.112766 )
texture = ExtResource( 1 )

[connection signal="gui_input" from="." to="." method="_on_MinButton_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_MinButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MinButton_mouse_exited"]
